--- a/site/css/style.css
+++ b/site/css/style.css
@@ -9,4 +9,12 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
     background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media only screen and (max-device-width: 400px) {
+    body {
+        background-color: hotpink;
+    }
 }
