--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,3 +1,5 @@
+/* Mobile version for iPhone 6s */
+
 body {
     background-color: lightblue;
 }
@@ -15,6 +17,20 @@ body {
 
 @media only screen and (max-device-width: 400px) {
     body {
-        background-color: hotpink;
+        background-color: lightblue;
+        margin: 0;
+        padding: 0;
+    }
+
+    .wrap {
+        width: 100vw;
+        height: 667px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+
+    header {
+        grid-column: 
     }
 }
