--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,10 +1,12 @@
 <main>
-    <h1>
-        Clock placeholder
-    </h1>
+    <div class="clock">
+        <h1>
+            Clock placeholder
+        </h1>
+    </div>
+    <div class="belowclock">
+        <h1>
+            img
+        </h1>
+    </div>
 </main>
-<article class="index">
-    <h1>
-        img
-    </h1>
-</article>
