Did some Photoshop and work on the layout.

--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -34,12 +34,12 @@
                 </div>
                 <div class="links">
                     <div class="instagram">
-                        <a href="">
+                        <a href="https://www.instagram.com/emilhansolov/">
                             Instagram
                         </a>
                     </div>
                     <div class="github">
-                        <a href="">
+                        <a href="https://github.com/itggot-emil-sonksen">
                             GitHub
                         </a>
                     </div>
