Finished background image

--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -5,8 +5,9 @@
         </h1>
     </div>
     <div class="belowclock">
-        <h1>
+        <%# <h1>
             img
-        </h1>
+        </h1> %>
+        <img src="./img/gladlofvenedit.png" alt="Löfven">
     </div>
 </main>
