--- a/site/css/style.css
+++ b/site/css/style.css
@@ -31,8 +31,8 @@ body {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(6, 1fr);
         background-image: url(../img/background_index.jpg);
-
-        /* background-color: rgba(207, 197, 197, 0); */
+        background-color: rgba(40, 40, 40, 1)
+        
     }
 
     header {
@@ -68,7 +68,7 @@ body {
         grid-row: span 4;
         display: inherit;
         grid-template-columns: inherit;
-        grid-template-rows: 4;
+        grid-template-rows: repeat(4, 1fr);
     }
 
     .clock {
@@ -79,6 +79,7 @@ body {
     .belowclock {
         grid-column: inherit;
         grid-row: span 2;
+        background-color: rgba(207, 197, 197, 0.5);
     }
 
     footer {
