Added hamburger menu and began editing another image

--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -8,6 +8,6 @@
         <%# <h1>
             img
         </h1> %>
-        <img src="./img/gladlofvenedit.png" alt="Löfven">
+        <%# <img src="./img/gladlofvenedit.png" alt="Löfven"> %>
     </div>
 </main>
