--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -14,17 +14,38 @@
 </head>
 
 <body>
+    <div class="fade-layer"></div>
     <div class="wrap">
+        <div class="menu">
+            <div class="icons" onclick="toggleMenu()">
+                <i class="material-icons">
+                    close
+                </i>
+            </div>
+            
+            <ul>
+                <a href="">
+                    Info
+                </a>
+            </ul>
+            <ul>
+                <a href="">
+                    Galleri
+                </a>    
+            </ul>
+        </div>
+        <nav>
+            <div class="icons" onclick="toggleMenu()">
+                <i class="material-icons">
+                    menu
+                </i>
+            </div>
+        </nav>
         <header>
             <h1>
                 Är det 1 maj?
             </h1>
         </header>
-        <nav>
-            <i class="material-icons">
-               menu
-            </i>
-        </nav>
         <%=yield%>
             <footer>
                 <div class="info">
@@ -46,6 +67,7 @@
                 </div>
             </footer>
     </div>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
