--- a/site/css/style.css
+++ b/site/css/style.css
@@ -30,7 +30,7 @@ body {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(6, 1fr);
-        background-image: url(../img/background_index.jpg);
+        background-image: url(../img/background_image_mobile.png);
         background-color: rgba(40, 40, 40, 1)
         
     }
@@ -58,10 +58,10 @@ body {
         font-size: 48px !important;
     }
 
-    .material-icons:hover {
+    /* .material-icons:hover {
         font-size: 60px !important;
         transition: 0.5s;
-    }
+    } */
 
     main {
         grid-column: span 4;
@@ -79,7 +79,7 @@ body {
     .belowclock {
         grid-column: inherit;
         grid-row: span 2;
-        background-color: rgba(207, 197, 197, 0.5);
+        /* background-color: rgba(207, 197, 197, 0.5); */
     }
 
     footer {
@@ -132,4 +132,60 @@ body {
         display: grid;
         align-items: center;
     }
+
+    .icon {
+        grid-row: 1/2;
+        grid-column: 1/2;
+        position: relative;
+        top: 2vh;
+        left: 1vw;
+    }
+
+    .fade-layer{
+        display: none;
+        background-color: black;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        opacity: 50;
+        z-index: 11;
+    }
+
+    .fade {
+        display: block;
+        opacity: 0.5;
+        transition: ease-out 1s;
+        z-index: 11;
+    }
+
+    .menu{
+        width: 50vw;
+        height: 100vh;
+        position: absolute;
+        background: rgba(175, 170, 170, 1);
+        display: block;
+        transform: translateX(-100%);
+        text-align: left;
+        transition: transform ease-out 0.5s;
+        z-index: 11;
+    }
+
+    .show {
+        display: block;
+        transition: transform ease-out 0.5s;
+        position: absolute;
+        transform: translateX(0%);
+    }
+
+    .menu .icons .material-icons { 
+        font-size: 60px !important;
+        margin-left: 63.75px;
+        margin-top: 26.584px;
+    }
+
+    ul {
+        font-size: 30px;
+        margin-top: 30px;
+    }
+
 }
