--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,89 +1,77 @@
 /* Mobile version for iPhone 6s */
 
 body {
-    background-color: lightblue;
-    /* background-image: url(../img/commie.jpg);
-    background-repeat: round; */
-    font-family: 'Montserrat', sans-serif;    
-
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .wrap {
-    width: 960px;
-    height: 720px;
+    width: 375px;
+    height: 667px;
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    background-image: url(../img/background_image_mobile.png);
+    background-color: rgba(40, 40, 40, 1)
+    
 }
 
 header {
-    grid-column: span 8;
-    grid-row: span 2;
-    background-color: blue;
+    grid-column: span 3;
+    grid-row: span 1;
+    text-align: center;
     display: grid;
     align-items: center;
-    text-align: center;
-    font-size: 30px;
-}
-
-header h1 {
-    margin: 0;
+    font-size: 16px;
+    background-color: rgba(175, 170, 170, 0.7);
 }
 
 nav {
-    grid-column: span 8;
-    grid-row: 3 / 4;
-    background-color: green;
+    grid-column: span 1;
+    grid-row: span 1;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    font-size: 24px;
+    text-align: center;
+    align-items: center;
+    background-color: rgba(146, 137, 137, 0.8)
 }
 
-nav > .icons {
+.desktop {
     display: none;
 }
 
-.home {
-    grid-column: span 1;
-    display: grid;
-    align-items: center;
-    text-align: center;
-}
-
-.about {
-    grid-column: span 1;
-    display: grid;
-    align-items: center;
-    text-align: center;
-}
-
-.gallery {
-    grid-column: span 1;
-    display: grid;
-    align-items: center;
-    text-align: center;
+.material-icons {
+    transition: 0.5s;
+    font-size: 48px !important;
 }
 
 main {
-    grid-column: span 8;
-    grid-row: span 8;
-    background-color: yellow;
+    grid-column: span 4;
+    grid-row: span 4;
+    display: inherit;
+    grid-template-columns: inherit;
+    grid-template-rows: repeat(4, 1fr);
+    /* background-color: none; */
+}
+
+.clock {
+    grid-column: inherit;
+    grid-row: span 2;
+}
+
+.belowclock {
+    grid-column: inherit;
+    grid-row: span 2;
+    /* background-color: rgba(207, 197, 197, 0.5); */
 }
 
 footer {
-    grid-column: span 8;
+    grid-column: span 4;
     grid-row: span 2;
-    background-color: pink;
     display: grid;
-    align-items: center;
-    text-align: center;
-    font-size: 20px;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
+    background-color: rgba(175, 170, 170, 0.5);
 }
 
 a {
@@ -92,204 +80,222 @@ a {
 }
 
 .info {
-    grid-column: span 4;
-    grid-row: span 1;
+    grid-column: span 1;
+    grid-row: span 2;
     text-align: center;
+    display: grid;
+    align-items: center;
+    font-size: 20px;
 }
 
 .links {
-    grid-column: span 4;
-    grid-row: span 1;
+    grid-column: span 1;
+    grid-row: span 2;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+}
+
+.links > a {
+    font-size: 18px;
+
 }
 
 .instagram {
     grid-column: span 1;
     grid-row: span 1;
+    display: grid;
+    align-items: center;
 }
 
 .github {
     grid-column: span 1;
     grid-row: span 1;
+    display: grid;
+    align-items: center;
 }
 
-.menu {
+.icon {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    position: relative;
+    top: 2vh;
+    left: 1vw;
+}
+
+.fade-layer{
     display: none;
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    opacity: 50;
+    z-index: 11;
 }
 
-@media only screen and (max-device-width: 400px) {
+.fade {
+    display: block;
+    opacity: 0.5;
+    transition: ease-out 1s;
+    z-index: 11;
+}
+
+.menu{
+    width: 50vw;
+    height: 100vh;
+    position: absolute;
+    background: rgba(175, 170, 170, 1);
+    display: block;
+    transform: translateX(-100%);
+    text-align: left;
+    transition: transform ease-out 0.5s;
+    z-index: 11;
+}
+
+.show {
+    display: block;
+    transition: transform ease-out 0.5s;
+    position: absolute;
+    transform: translateX(0%);
+}
+
+.menu .icons .material-icons { 
+    font-size: 60px !important;
+    margin-left: 63.75px;
+    margin-top: 26.584px;
+}
+
+ul {
+    font-size: 30px;
+    margin-top: 30px;
+}
+
+@media only screen and (min-device-width: 400px) {
     body {
-        margin: 0;
-        padding: 0;
-        
+        background-color: lightblue;
+        /* background-image: url(../img/commie.jpg);
+        background-repeat: round; */
+            
+    
     }
-
+    
     .wrap {
-        width: 375px;
-        height: 667px;
+        width: 960px;
+        height: 720px;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        background-image: url(../img/background_image_mobile.png);
-        background-color: rgba(40, 40, 40, 1)
-        
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        background-color: white;
+        margin-left: auto;
+        margin-right: auto;
     }
-
+    
     header {
-        grid-column: span 3;
-        grid-row: span 1;
-        text-align: center;
+        grid-column: span 8;
+        grid-row: span 2;
+        background-color: blue;
         display: grid;
         align-items: center;
-        font-size: 16px;
-        background-color: rgba(175, 170, 170, 0.7);
+        text-align: center;
+        font-size: 30px;
     }
-
+    
+    header h1 {
+        margin: 0;
+    }
+    
     nav {
-        grid-column: span 1;
-        grid-row: span 1;
+        grid-column: span 8;
+        grid-row: 3 / 4;
+        background-color: green;
         display: grid;
-        text-align: center;
-        align-items: center;
-        background-color: rgba(146, 137, 137, 0.8)
-    }
-
-    .material-icons {
-        transition: 0.5s;
-        font-size: 48px !important;
-    }
-
-    /* .material-icons:hover {
-        font-size: 60px !important;
-        transition: 0.5s;
-    } */
-
-    main {
-        grid-column: span 4;
-        grid-row: span 4;
-        display: inherit;
-        grid-template-columns: inherit;
-        grid-template-rows: repeat(4, 1fr);
-        /* background-color: none; */
-    }
-
-    .clock {
-        grid-column: inherit;
-        grid-row: span 2;
-    }
-
-    .belowclock {
-        grid-column: inherit;
-        grid-row: span 2;
-        /* background-color: rgba(207, 197, 197, 0.5); */
-    }
-
-    footer {
-        grid-column: span 4;
-        grid-row: span 2;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1fr;
-        background-color: rgba(175, 170, 170, 0.5);
+        font-size: 24px;
     }
-
+    
+    nav > .icons {
+        display: none;
+    }
+    
+    .desktop {
+        grid-column: span 3;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+    }
+    
+    .home {
+        grid-column: span 1;
+        display: grid;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .about {
+        grid-column: span 1;
+        display: grid;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .gallery {
+        grid-column: span 1;
+        display: grid;
+        align-items: center;
+        text-align: center;
+    }
+    
+    main {
+        grid-column: span 8;
+        grid-row: span 8;
+        background-color: yellow;
+    }
+    
+    footer {
+        grid-column: span 8;
+        grid-row: span 2;
+        background-color: pink;
+        display: grid;
+        align-items: center;
+        text-align: center;
+        font-size: 20px;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: 1fr;
+    }
+    
     a {
         text-decoration: none;
         color: black;
     }
-
+    
     .info {
-        grid-column: span 1;
-        grid-row: span 2;
+        grid-column: span 4;
+        grid-row: span 1;
         text-align: center;
-        display: grid;
-        align-items: center;
-        font-size: 20px;
     }
-
+    
     .links {
-        grid-column: span 1;
-        grid-row: span 2;
+        grid-column: span 4;
+        grid-row: span 1;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        text-align: center;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
     }
-
-    .links > a {
-        font-size: 18px;
-
-    }
-
+    
     .instagram {
         grid-column: span 1;
         grid-row: span 1;
-        display: grid;
-        align-items: center;
     }
-
+    
     .github {
         grid-column: span 1;
         grid-row: span 1;
-        display: grid;
-        align-items: center;
     }
-
-    .icon {
-        grid-row: 1/2;
-        grid-column: 1/2;
-        position: relative;
-        top: 2vh;
-        left: 1vw;
-    }
-
-    .fade-layer{
+    
+    .menu {
         display: none;
-        background-color: black;
-        width: 100vw;
-        height: 100vh;
-        position: fixed;
-        opacity: 50;
-        z-index: 11;
-    }
-
-    .fade {
-        display: block;
-        opacity: 0.5;
-        transition: ease-out 1s;
-        z-index: 11;
-    }
-
-    .menu{
-        width: 50vw;
-        height: 100vh;
-        position: absolute;
-        background: rgba(175, 170, 170, 1);
-        display: block;
-        transform: translateX(-100%);
-        text-align: left;
-        transition: transform ease-out 0.5s;
-        z-index: 11;
-    }
-
-    .show {
-        display: block;
-        transition: transform ease-out 0.5s;
-        position: absolute;
-        transform: translateX(0%);
-    }
-
-    .menu .icons .material-icons { 
-        font-size: 60px !important;
-        margin-left: 63.75px;
-        margin-top: 26.584px;
-    }
-
-    ul {
-        font-size: 30px;
-        margin-top: 30px;
     }
 
 }
