--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -38,6 +38,7 @@
                     Galleri
                 </a>
             </ul>
+            <img src="./img/menu-image.png" alt="Send you to gulag, damned capitalist pig...">
         </div>
         <nav>
             <div class="icons" onclick="toggleMenu()">
