Added image to about

--- a/site/about.html.erb
+++ b/site/about.html.erb
@@ -1,11 +1,15 @@
 <main>
     <article>
-
+        <h1>
+            1 Maj
+        </h1>
+        <p>
+            Första maj är arbetarrörelsens internationella högtidsdag som firas sedan 1890 på initiativ av Andra internationalen, bland
+            annat till åminnelse av Haymarketmassakern 1886. Denna dag firas runt om i världen av olika vänsterorganisationer,
+            partier och fackföreningar med demonstrationer och möten. 
+        </p>
     </article>
     <aside>
-
-    </aside>
-    <aside>
-        
+        <img src="./img/about-image.png" alt="Strong together, comrade!">
     </aside>
 </main>
