--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -24,17 +24,17 @@
             </div>
 
             <ul>
-                <a href="">
+                <a href="./index.html">
                     Hem
                 </a>
             </ul>
             <ul>
-                <a href="">
+                <a href="./about.html">
                     Info
                 </a>
             </ul>
             <ul>
-                <a href="">
+                <a href="./gallery.html">
                     Galleri
                 </a>
             </ul>
