--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -54,6 +54,26 @@ main {
     /* background-color: none; */
 }
 
+article {
+    grid-column: span 2;
+    grid-row: span 4;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(134, 129, 129, 0.8);
+}
+
+article p {
+    font-size: 14px;
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+aside {
+    grid-column: span 2;
+    grid-row: span 4;
+    background-color: rgba(175, 175, 175, 0.8);
+}
+
 .clock {
     grid-column: inherit;
     grid-row: span 2;
