Finished about.html

--- a/site/about.html.erb
+++ b/site/about.html.erb
@@ -6,10 +6,18 @@
         <p>
             Första maj är arbetarrörelsens internationella högtidsdag som firas sedan 1890 på initiativ av Andra internationalen, bland
             annat till åminnelse av Haymarketmassakern 1886. Denna dag firas runt om i världen av olika vänsterorganisationer,
-            partier och fackföreningar med demonstrationer och möten. 
+            partier och fackföreningar med demonstrationer och möten.
         </p>
     </article>
     <aside>
-        <img src="./img/about-image.png" alt="Strong together, comrade!">
+        <div class="march">
+            <img src="./img/about-image.png" alt="Strong together, comrade!">
+        </div>
+        <dev class="imageinfo">
+            <p>
+                På bilden ovan syns Första-
+                majdemonstrationen i Moskva år 1960
+            </p>
+        </dev>
     </aside>
 </main>
