--- a/site/gallery.html.erb
+++ b/site/gallery.html.erb
@@ -1,3 +1,20 @@
-<main>
-    
-</main>
+<div class="gallery">
+    <div class="image1">
+        <img src="./img/gallery-image1.png" alt="Fight the capitalists!">
+        <!-- <div class="gallery-info">
+            265 * 150
+        </div> -->
+    </div>
+    <div class="image2">
+        <img src="./img/gallery-image2.png" alt="Welcome, comrade.">
+        <!-- <div class="gallery-info">
+            106 * 150
+        </div> -->
+    </div>
+    <div class="image3">
+        <img src="./img/gallery-image3.png" alt="Together we are strong!">
+        <!-- <div class="gallery-info">
+            106 * 150
+        </div> -->
+    </div>
+</div>
