--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -13,6 +13,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
     background-image: url(../img/background_image_mobile.png);
+    background-repeat: space;
     background-color: rgba(40, 40, 40, 1)
     
 }
@@ -48,10 +49,21 @@ nav {
 main {
     grid-column: span 4;
     grid-row: span 4;
-    display: inherit;
+    display: grid;
     grid-template-columns: inherit;
     grid-template-rows: repeat(4, 1fr);
     /* background-color: none; */
+}
+
+.clock {
+    grid-column: inherit;
+    grid-row: span 2;
+}
+
+.belowclock {
+    grid-column: inherit;
+    grid-row: span 2;
+    /* background-color: rgba(207, 197, 197, 0.5); */
 }
 
 article {
@@ -88,15 +100,32 @@ aside {
     margin: 15px;
 }
 
-.clock {
-    grid-column: inherit;
-    grid-row: span 2;
+.gallery {
+    grid-column: span 4;
+    grid-row: span 4;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    background-color: rgba(170, 160, 160, 0.4);
 }
 
-.belowclock {
-    grid-column: inherit;
-    grid-row: span 2;
-    /* background-color: rgba(207, 197, 197, 0.5); */
+.image1 {
+    grid-column: 2 / 7;
+    grid-row: 2 / 5;
+}
+
+.image2 {
+    grid-column: 2 / 4;
+    grid-row: 6 / 9;
+}
+
+.image3 {
+    grid-column: 5 / 7;
+    grid-row: 6 / 9;
+}
+
+.gallery-info {
+
 }
 
 footer {
