--- a/site/gallery.html.erb
+++ b/site/gallery.html.erb
@@ -1,4 +1,4 @@
-<div class="gallery">
+<div class="page-gallery">
     <div class="image1">
         <img src="./img/gallery-image1.png" alt="Fight the capitalists!">
         <!-- <div class="gallery-info">
