--- a/site/gallery.html.erb
+++ b/site/gallery.html.erb
@@ -17,4 +17,18 @@
             106 * 150
         </div> -->
     </div>
+    <div class="gallery-desktop">
+        <div class="desktop-image1">
+            <img src="./img/gallery-image-desktop1.png" alt="">
+        </div>
+        <div class="desktop-image2">
+            <img src="./img/gallery-image-desktop2.png" alt="">
+        </div>
+        <div class="desktop-image3">
+            <img src="./img/gallery-image-desktop3.png" alt="">
+        </div>
+        <div class="desktop-image4">
+            <img src="./img/gallery-image-desktop4.png" alt="">
+        </div>
+    </div>
 </div>
