--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -117,7 +117,7 @@ aside {
     background-color: rgba(170, 160, 160, 0.4);
 }
 
-.galley-desktop {
+.gallery-desktop {
     display: none;
 }
 
@@ -394,7 +394,7 @@ ul {
     .gallery-desktop {
         grid-column: 2 / 11;
         grid-row: 2 / 13;
-        display: grid;
+        display: grid !important;
         grid-template-columns: repeat(9, 1fr);
         grid-template-rows: repeat(11, 1fr);
     }
@@ -402,25 +402,21 @@ ul {
     .desktop-image1 {
         grid-column: 1 / 5;
         grid-row: 1 / 6;
-        background-color: yellow;
     }
 
     .desktop-image2 {
         grid-column: 1 / 5;
         grid-row: 7 / 12;
-        background-color: yellow;
     }
 
     .desktop-image3 {
         grid-column: 6 / 10;
         grid-row: 1 / 6;
-        background-color: yellow;
     }
 
     .desktop-image4 {
         grid-column: 6 / 10;
         grid-row: 7 / 12;
-        background-color: yellow;
     }
 
     .image1 {
